<resources>
    <string name="app_name">Food Donation</string>
    <string name="title_activity_login">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="loginbutton_text">Login</string>
    <string name="signup_text">No account? Sign Up!</string>
    <string name="title_activity_signup">Signup</string>
    <string name="email_text">Email</string>
    <string name="confirm_text">Confirm Password</string>
    <string name="signupbutton_text">Sign Up</string>
    <string name="signup_error_message">Please make sure you to validate the information you provided </string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password! </string>
    <string name="login_error_title">Oops!</string>
    <string name="logout_menu">Logout</string>
    <string name="title_section1">Donor List</string>
    <string name="title_section2">Recipient List</string>
    <string name="title_post">FoodPost</string>
    <string name="empty_donor_list">No new Donors!</string>
    <string name="empty_recipient_list">No new Recipients!</string>
    <string name="donor_radio_lable">I am a Donor</string>
    <string name="recipient_radio_lable">I am a Recipient</string>
    <string name="address_hint">Address</string>
    <string name="name_hint">Organization Name</string>
    <string name="zipcode_hint">Zip Code</string>
    <string name="phone_hint">Phone</string>
    <string name="numpeople_hint">Approximate People</string>
    <string name="post_submit_text">Submit</string>
    <string name="title_activity_food_posting">FoodPosting</string>
    <string name="action_settings">Settings</string>
    <string name="posting_menu">Food Post</string>
    <string name="submit_error_message">Please make sure you enter all the fields correctly</string>
    <string name="submit_success">Your post was submitted successfully!</string>
    <string name="submit_success_title">Submitted!</string>
    <string name="posting_home">Home</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">lLFs7SfIanB6GnKzZQS3FeyFNsYw0qpMMuLZIoju</string>
    <string name="back4app_client_key">mkgnO3Y1SVJp4DKPTGnJ1IJte5cl1oHJh6T3RkSd</string>
    <string name="gcm_sender_id">895840217533</string>

    <!-- Strings for activity ChatActivity -->
    <string name="aC_message_hint">Type a message…</string>
    <string name="aC_btn_send">Send</string>

    <!-- Strings for layout ItemChat -->
    <string name="iC_profile_me">My Profile Pic</string>
    <string name="iC_profile_other">Other profile pic</string>

    <!-- String for our Toasts -->
    <string name="toast_saved_message_ok"> </string>
    <string name="toast_saved_message_err">Failed to send message, please try again or wait for a while</string>
    <string name="toast_load_messages_err">Error loading messages</string>
    <string name="toast_anonymous_login_err">Anonymous login failed: </string>
    <string name="not_accepted">Not accepted yet by anyone!</string>
    <string name="city_prompt">Choose your district:</string>
    <string name="donate_speech">Using the Food Donation app, the food donor organizations can post about food donation and the food shelter organizations can also post about food request. Both the organizations can give their contact information and food approximation and can view the lists of available food donors and recipients. The entries of food posts will be automatically deleted after 24 hours. Please Login or Signup to begin.</string>

    <string-array name="cities">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Rajshahi</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Mymensingh</item>
        <item>Barishal</item>
        <item>Rangpur</item>
        <item>Comilla</item>
        <item>Narayanganj</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
    </string-array>

</resources>
