<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anik.app.fooddonation.FoodPosting" >
    <item android:id="@+id/action_home"
        android:title="@string/posting_home"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_posting"
        android:title="@string/posting_menu"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/logout_menu"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="About"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
