<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FoodPosting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/radioGroupDR">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donor_radio_lable"
                android:id="@+id/radioDonor"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipient_radio_lable"
                android:id="@+id/radioRecipient"
                android:textSize="16sp" />
        </RadioGroup>



        <RelativeLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <RelativeLayout
                android:id="@+id/approx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:padding="15dp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp">

                <TextView
                    android:id="@+id/DRpeople"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/numpeople_hint"
                    android:textSize="16sp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/peoplenum"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/DRpeople"
                    android:layout_marginLeft="20dp"
                    android:layout_toEndOf="@+id/DRpeople"
                    android:layout_toRightOf="@+id/DRpeople"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="#6B6B6B"
                    android:textSize="16sp" />

            </RelativeLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/DRname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_below="@+id/approx"
                android:hint="@string/name_hint"
                android:textSize="16sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/DRaddress"
                android:layout_below="@+id/DRname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/address_hint"
                android:textSize="16sp"
                android:textIsSelectable="false" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_above="@+id/post_button"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@+id/DRphone"
                android:entries="@array/cities"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:prompt="@string/city_prompt" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/DRzipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/DRaddress"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/zipcode_hint"
                android:inputType="number"
                android:maxLength="5"
                android:textSize="16sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/DRphone"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/DRzipcode"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="14"
                android:textSize="16sp" />


            <soup.neumorphism.NeumorphButton
                android:id="@+id/post_button"
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:layout_below="@+id/DRphone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="53dp"
                android:gravity="center"
                android:text="@string/post_submit_text"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3ef3f3f"
            android:id="@+id/datetext"
            android:textSize="16sp"
            android:padding="20dp"
            android:gravity="center"/>

    </LinearLayout>



</ScrollView>
