<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_food"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/username_text"
            android:textColor="#000000"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:layout_below="@+id/login_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/password_text"
            android:textColor="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_below="@+id/login_password"
            android:layout_centerHorizontal="true"
            android:text="@string/loginbutton_text"
            android:textSize="20sp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_link"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_text"
            android:gravity="center"
            android:typeface="monospace"
            android:padding="20dp"/>


    </LinearLayout>

</RelativeLayout>
